--- a/TongjiAssessment/Views/Shared/_Layout.cshtml
+++ b/TongjiAssessment/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Tongji   评课社区", "List", "CommentRecord", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Tongji   评课社区", "List", "Comment", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -73,7 +73,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year 年 @DateTime.Now.Month - @DateTime.Now.Day    - 同济大学评课社区</p>
+            <p>&copy; @DateTime.Now.Year 年 @DateTime.Now.Month 月 @DateTime.Now.Day 日  ——同济大学评课社区</p>
         </footer>
     </div>
 
